# HwDashBoard

./: CMakeLists.txt  CanUitl.cpp  CanUtil.cpp  CanUtil.h  GlobalEnv.cpp  GlobalEnv.h  README.md  main.cpp  qml.qrc
qmlfiles/: Battery.qml  CurvedRectangle.qml  CustomCircleGauge.qml  DashArc.qml  DashboardGaugeStyle.qml  DashedCircle.qml  Head.qml  MainInfoPanel.qml  PowerPanel.qml  RpmPanel.qml  SpeedPanel.qml  TurnLight.qml  main.qml  testMainBoard.qml
